- more refactoring, cleanup & application-test.properties